Fixing some more styles to align with everything

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,10 @@ html{
   align-self: auto;
 }
 
+#hire .bg-dark{
+  background-color: #802BB1;
+}
+
 body {
  /* background: grey; */
   /*background: linear-gradient(#6a1b9a, #ff4081);*/
